{
  "titleGeneralEmail": "Email",
  "@titleGeneralEmail": {
    "description": "Label of the Email text form field"
  },
  "titleGeneralPassword": "Password",
  "@titleGeneralPassword": {
    "description": "Label of the Password text form field"
  },
  "titleToday": "Today",
  "@titleToday": {
    "description": "Label Today on the Home screen"
  },
  "titleGeneralError": "Error",
  "@titleGeneralError": {
    "description": "A generic Error label"
  },
  "buttonLogin": "Login",
  "@buttonLogin": {
    "description": "Label of the Login button"
  },
  "buttonStartSurvey": "Start Survey",
  "@buttonStartSurvey": {
    "description": "Label of the Start Survey button"
  },
  "buttonSubmit": "Submit",
  "@buttonSubmit": {
    "description": "Label of the Submit button"
  },
  "hintTextArea": "Your thoughts",
  "@hintTextArea": {
    "description": "The default hint text of a text area for an Answer text field"
  },
  "errorValidationEmailEmpty": "Please enter your email",
  "@errorValidationEmailEmpty": {
    "description": "Error message when Email is empty"
  },
  "errorValidationEmailInvalid": "Please enter a valid email",
  "@errorValidationEmailInvalid": {
    "description": "Error message when Email is invalid"
  },
  "errorLoginFailed": "Login failed! Please recheck your email or password",
  "@errorLoginFailed": {
    "description": "Error message when login credential is invalid"
  },
  "errorGeneralTitle": "Oops!",
  "@errorGeneralTitle": {
    "description": "General error title can be used for any case"
  },
  "errorGeneralMessage": "Something went wrong, please try again",
  "@errorGeneralMessage": {
    "description": "General error message can be used for any case"
  }
}
