...
  RatingType({this.icon, this.unratedColor, this.counter = DEFAULT_RATE_COUNT});
}

class HeartRatingType extends RatingType {
  HeartRatingType({counter})
      : super(
            icon: const Text("❤️"),
            unratedColor: Colors.redAccent.withOpacity(0.4),
            counter: counter);
}

class StarRatingType extends RatingType {
  StarRatingType({counter})
      : super(
            icon: const Text("⭐️"),
            unratedColor: Colors.amber.withOpacity(0.4),
            counter: counter);
}

// TODO: because there is no design, we use this for now
class SliderRatingType extends RatingType {
...
